# contact_form

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
app/: pyproject.toml
app/contact_form/: __init__.py  __main__.py  _config.py  wsgi.py
app/contact_form/templates/: result.html
contact_form/: __init__.py  _config.py  wsgi.py
contact_form/templates/: contact.html
hosting/: Makefile  host_nginx_config
image/: Dockerfile  docker-compose.yml
image/config/: supervisord.conf  wsgi.ini
